--- a/html-injection/html-injection.html
+++ b/html-injection/html-injection.html
@@ -14,6 +14,7 @@
     <br />
     <br />
     <button type="button" onClick="alertName()">Submit Name</button>
-  </form> 
+  </form>
+    <p id="name-display"></p>
 </body>
 </html>
