--- a/answers/html-injection/html-injection.html
+++ b/answers/html-injection/html-injection.html
@@ -13,7 +13,7 @@
     <input type="text" id="name" name="name">
     <br />
     <br />
-    <button type="button" onClick="alertName()">Submit Name</button>
+    <button type="button" onClick="displayName()">Submit Name</button>
   </form>
     <p id="name-display"></p>
 </body>
