--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>Homepage</title>
   </head>
   <body>
-    <div id="app"></div>
+    <h1>Web Security Exercise</h1>
+    <p>
+      Welcome to the Web Security Exercise! The goal of this project is to help web developers understand common <br />
+      web app vulnerabilities. We will be going through examples of the OWASP Top Ten and giving you a chance to <br />
+      identify and remediate the offending code. Click on one of the links below to get started!
+    </p>
+
+    <h2>OWASP Top Ten</h2>
+    <h3>A03:2021 - Injection</h3>
+    <ul>
+      <li>
+        <a href="./html-injection/html-injection.html">HTML Injection</a>
+      </li>
+    </ul>
   </body>
 </html>
