--- a/html-injection/html-injection.html
+++ b/html-injection/html-injection.html
@@ -16,9 +16,11 @@
     <button type="button" onClick="displayName()">Submit Name</button>
   </form>
     <p id="name-display"></p>
-    
+
     <a href="../answers/html-injection/html-injection-explanation.html">Fixed Example</a>
     <br />
     <a href="../answers/html-injection/explanation.html">Answer</a>
+    <br />
+    <a href="../index.html">Home</a>
 </body>
 </html>
