Add nav links to explanation.

--- a/answers/html-injection/html-injection-explanation.html
+++ b/answers/html-injection/html-injection-explanation.html
@@ -16,5 +16,11 @@
     <button type="button" onClick="displayName()">Submit Name</button>
   </form>
     <p id="name-display"></p>
+
+    <a href="../../html-injection/html-injection.html">HTML Injection Example</a>
+    <br />
+    <a href="../../answers/html-injection/explanation.html">Explanation</a>
+    <br />
+    <a href="../../index.html">Home</a>
 </body>
 </html>
