--- a/answers/html-injection/explanation.html
+++ b/answers/html-injection/explanation.html
@@ -41,5 +41,11 @@
       };
     </pre>
   </code>
+
+  <a href="../../html-injection/html-injection.html">HTML Injection Example</a>
+  <br />
+  <a href="../../answers/html-injection/html-injection-explanation.html">Fixed Example</a>
+  <br />
+  <a href="../../index.html">Home</a>
 </body>
 </html>
