--- a/html-injection/html-injection.html
+++ b/html-injection/html-injection.html
@@ -8,6 +8,9 @@
 </head>
 <body>
   <h1>HTML Injection - Broken</h1>
+  <p>
+    Enter your name below and click submit name, then enter some html and see what happens...
+  </p>
   <form>
     <label for="name">Name:</label>
     <input type="text" id="name" name="name">
