Add more instructions.

--- a/html-injection/html-injection.html
+++ b/html-injection/html-injection.html
@@ -9,7 +9,8 @@
 <body>
   <h1>HTML Injection - Broken</h1>
   <p>
-    Enter your name below and click submit name, then enter some html and see what happens...
+    Enter your name below and click submit name, then enter some html and see what happens... <br />
+    After, modify html-injection.js to fix the vulnerability.
   </p>
   <form>
     <label for="name">Name:</label>
