--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     </p>
 
     <h2>OWASP Top Ten</h2>
+    <h3>A02:2021 - Cryptographic Failures</h3>
+    <ul>
+      <li>
+        <a href="./flask-backend/insecure-password-hashing.html">Insecure Password Hashing</a>
+      </li>
+    </ul>
+
     <h3>A03:2021 - Injection</h3>
     <ul>
       <li>
